tests/compile_fail/unsupoted_meta_data_format.stderr
error: unsported meta data.
 --> $DIR/unsupoted_meta_data_format.rs:5:48
  |
5 |     #[def(field_num = 100, def_type = "int32", "int32")]
  |                                                ^^^^^^^
